Atualização das URLs das APIs no frontend

--- a/backend/.env
+++ b/backend/.env
@@ -7,10 +7,8 @@ MONGO_URI=mongodb+srv://bosconogueira01:teste1234@joaobosco.dxw25lr.mongodb.net/
 # 🔹 Configuração do JWT (Autenticação)
 JWT_SECRET=visitaGuiadaSuperSecreto123  # Altere para uma chave mais segura em produção
 
-# 🔹 Configuração do DocSpring para Geração de Certificados
-DOCSPRING_API_KEY=api_test_kqQmbCk2hQNnHGesXm
-DOCSPRING_TEMPLATE_ID=tpl_JhJXYe52AJaygSatP5
-
-
 # 🔹 Configuração do CORS para o frontend
 FRONTEND_URL=http://localhost:3000
+
+# 🔹 Caminho para armazenar certificados gerados
+CERTIFICATES_PATH=backend/certificates
