--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.12.0",
+    "pdfkit": "^0.16.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
